--- a/service-b/Dockerfile
+++ b/service-b/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY target/your-app.jar app.jar
+COPY target/service-b.jar app.jar
 EXPOSE 28810
 ENTRYPOINT ["java", "-jar", "app.jar"]
