--- a/service-c/Dockerfile
+++ b/service-c/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY target/your-app.jar app.jar
+COPY target/service-c.jar app.jar
 EXPOSE 28800
 ENTRYPOINT ["java", "-jar", "app.jar"]
