--- a/service-c/pom.xml
+++ b/service-c/pom.xml
@@ -30,6 +30,7 @@
     </dependencies>
 
     <build>
+        <finalName>service-c</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
